Moved website files to repository root for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <img src="dance2.jpg" alt="Dance 2">
   <img src="dance3.jpg" alt="Dance 3">
   <img src="dance4.jpg" alt="Dance 4">
-  <img src="ananya.jpg" alt="Dance 5">
+  <img src="ananya-arangetram2.jpg" alt="Dance 5">
   <img src="about-image1.jpg" alt="Dance 6">
   <img src="soumya-aunty-faq.png" alt="Dance 7">
   <img src="soumya-aunty-pic.jpg" alt="Dance 8">
