Changing some photos

--- a/about.html
+++ b/about.html
@@ -44,10 +44,12 @@
     <div class="page-content">
     <div class="image-carousel2">
         <div class="carousel-track2">
+            <img src="US.JPEG" alt="Image a">
             <img src="dance1.jpg" alt="Image a">
+            <img src="class.jpg" alt="Image c">
+            <img src="group.jpg" alt="Image a">
             <img src="dance2.jpg" alt="Image b">
             <img src="about-image1.jpg" alt="Image c">
-            <img src="dance4.jpg" alt="Image c">
         </div>
         <div class="img-container">
             <div class="img-overlay-text">
