--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
     <div class="staggered-block2 block-bottom-right2">
-        <img src="dance1.jpg" alt="IMG"> <a href="about.html" class="block-button">
+        <img src="US.JPEG" alt="IMG"> <a href="about.html" class="block-button">
             <h2>Samskrithi School of Dance is a Kalakshetra-style Bharatanatyam School in the Greater Boston Area.</h2>
             <p class="button-title">ABOUT US</p>
             <span class="arrow">&rarr;</span>
@@ -144,7 +144,7 @@
   <img src="dance4.jpg" alt="Dance 4">
   <img src="ananya-arangetram2.jpg" alt="Dance 5">
   <img src="about-image1.jpg" alt="Dance 6">
-  <img src="soumya-aunty-faq.png" alt="Dance 7">
+  <img src="ananya-mira.JPG" alt="Dance 7">
   <img src="soumya-aunty-pic.jpg" alt="Dance 8">
   <img src="performance1.jpg" alt="Dance 9">
   <img src="performance2.jpg" alt="Dance 10">
