--- a/performances.html
+++ b/performances.html
@@ -45,7 +45,9 @@
         <img src="performance1.jpg" alt="Image a">
         <img src="performance2.jpg" alt="Image b">
         <img src="dance3.jpg" alt="Image c">
-        <img src="IMG_5001.jpg" alt="Image c">
+        <img src="dance4.jpg" alt="Image c">
+        <img src="real-thillana.jpg" alt="Image c">
+        <img src="sumedha-arangetram.jpg" alt="Image c">
     </div>
 
         <div class="performance-container">
