Added Arangetram Pics

--- a/performances.html
+++ b/performances.html
@@ -160,13 +160,13 @@ Arangetram is the first formal solo performance by the dancer after several year
 </p>
   </div>
     <div class="img-item">
-    <img src="ananya.jpg" alt="Image">
+    <img src="shreya-arangetram.jpg" alt="Image">
     <p class="video-caption">
-  <a href="https://www.youtube.com/watch?v=FbdiGSEmVUc&list=PL-Nj6qAkOsqopiPH7NrVQx5Cdb-t15hqx" target="_blank" class="arangetram-link">SHREYA RAMANATHAN - 2022</a>
+  <a href="https://youtu.be/gfKtLIMcIpw" target="_blank" class="arangetram-link">SHREYA RAMANATHAN - 2022</a>
 </p>
   </div>
     <div class="img-item">
-    <img src="ananya-arangetram.jpg" alt="Image">
+    <img src="AnanyaArangetram.jpg" alt="Image">
        <p class="video-caption">
   <a href="https://www.youtube.com/watch?v=FbdiGSEmVUc&list=PL-Nj6qAkOsqopiPH7NrVQx5Cdb-t15hqx" target="_blank" class="arangetram-link">ANANYA SRINIVASAN - 2022</a>
 </p>
@@ -178,9 +178,9 @@ Arangetram is the first formal solo performance by the dancer after several year
 </p>
   </div>
     <div class="img-item">
-    <img src="ananya.jpg" alt="Image">
+    <img src="riya-arangetram.jpeg" alt="Image">
     <p class="video-caption">
-  <a href="https://www.youtube.com/watch?v=FbdiGSEmVUc&list=PL-Nj6qAkOsqopiPH7NrVQx5Cdb-t15hqx" target="_blank" class="arangetram-link">KAYAL BALACHANDAR - 2024</a>
+  <a href="https://www.youtube.com/playlist?list=PLtrlLc67Bzzdd7VQa0zSEJo_SVAB9aiKU" target="_blank" class="arangetram-link">KAYAL BALACHANDAR - 2024</a>
 </p>
   </div>
   <div class="img-item">
