Some minor updates

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </div>
     <div class="text-block">
         <h1>Samskrithi School of Dance</h1>
-        <p>Kalakshetra-Style Bharatanatyam in the Greater Boston Area</p>
+        <p>Bharatanatyam in the Greater Boston Area</p>
     </div>
     <nav class="main-nav">
         <button class="hamburger" aria-label="Toggle navigation">
@@ -74,8 +74,6 @@
     </div>
   -->
 <br>
-<br>
-<br>
 <div class="guru-title">
     Guru
 </div>
@@ -99,12 +97,12 @@
   <div class="text-side">
     <h1>Ananya Srinivasan</h1>
     <p>
-        Ananya Srinivasan is a rising senior in high school, and has been a student of Samskrithi School of Dance for over 10 years. She has advanced from the basics to mastering complex pieces and reached a significant milestone with her 3-hour solo concert, the Arangetram, in the summer of 2022. As one of the school’s senior students, Ananya trains extensively and regularly performs at prestigious events like the Cleveland Thyagaraja Aradhana, the largest Indian classical music and dance festival outside India. In addition to her performances, Ananya actively participates in fundraisers, charity events, and competitions.
+        Ananya Srinivasan is a senior in high school, and has been a student of Samskrithi School of Dance for over 10 years. She has advanced from the basics to mastering complex pieces and reached a significant milestone with her 3-hour solo concert, the Arangetram, in the summer of 2022. As one of the school’s senior students, Ananya trains extensively and regularly performs at prestigious events like the Cleveland Thyagaraja Aradhana, the largest Indian classical music and dance festival outside India. In addition to her performances, Ananya actively participates in fundraisers, charity events, and competitions.
 <br><br>
 Ananya teaches Bharatanatyam to students ranging from young beginners to advanced students, inspiring their passion for dance. Her personalized instruction has led to impressive growth among students, many of whom have successfully prepared for their own Arangetrams and significant dance milestones.
 <br><br>
 In addition to dance, Ananya enjoys Carnatic vocal music, which she has been learning for almost 9 years. When not practicing dance or vocal music, Ananya can be found reading fantasy fiction or painting a canvas.
- Fun fact: she also coded this website!
+ Fun fact: she also coded this website and designed the Samskrithi logo!
     </p>
   </div>
   <div class="image-side">
@@ -120,7 +118,8 @@ In addition to dance, Ananya enjoys Carnatic vocal music, which she has been lea
       <h1>Samskrithi School of Dance</h1>
       <br>
       <p>Samskrithi School of Dance is a school in the Greater Boston area dedicated to promoting Kalakshetra-style Bharatanatyam. Its mission is to teach students dedication and respect for the arts through classes and workshops.</p>
-
+      <br>
+      <p>© 2025 Samskrithi School of Dance. All Rights Reserved.</p>
     </div>
   </div>
 
