--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     </div>
     <div class="text-block">
         <h1>Samskrithi School of Dance</h1>
-        <p>Kalakshetra-Style Bharatanatyam in the Greater Boston Area</p>
+        <p>Bharatanatyam in the Greater Boston Area</p>
     </div>
     <nav class="main-nav">
         <button class="hamburger" aria-label="Toggle navigation">
@@ -67,7 +67,8 @@
       <h1>Samskrithi School of Dance</h1>
       <br>
       <p>Samskrithi School of Dance is a school in the Greater Boston area dedicated to promoting Kalakshetra-style Bharatanatyam. Its mission is to teach students dedication and respect for the arts through classes and workshops.</p>
-
+      <br>
+      <p>© 2025 Samskrithi School of Dance. All Rights Reserved.</p>
     </div>
   </div>
 
