--- a/faqs.html
+++ b/faqs.html
@@ -26,7 +26,7 @@
     </div>
     <div class="text-block">
         <h1>Samskrithi School of Dance</h1>
-        <p>Kalakshetra-Style Bharatanatyam in the Greater Boston Area</p>
+        <p>Bharatanatyam in the Greater Boston Area</p>
     </div>
     <nav class="main-nav">
         <button class="hamburger" aria-label="Toggle navigation">
@@ -61,7 +61,7 @@
       </button>
       <div class="faq-answer">
         <p>
-          Bharatanatyam is one of the oldest classical dance forms of India, known for its grace, expressions, and storytelling, and is considered the oldest classical tradition of India. The dance employs compelling stories from a vast resource of Hindu mythology, and also displays variations of geometric movements and patterns that can range from slow and subtle to crisp and bold.
+          Bharatanatyam is one of the oldest classical dance forms of India, known for its grace, expressions, and storytelling. The dance employs compelling stories from a vast resource of Hindu mythology, and also displays variations of geometric movements and patterns that can range from slow and subtle to crisp and bold.
         </p>
       </div>
     </div>
@@ -73,7 +73,7 @@
       </button>
       <div class="faq-answer">
         <p>
-          We welcome students of all ages — from children 6 or above to adults!
+          We welcome students of all ages — from children of age 6 to adults!
         </p>
       </div>
     </div>
@@ -96,7 +96,7 @@ The Kalakshetra style of Bharatanatyam, developed and popularized by Rukmini Dev
       </button>
       <div class="faq-answer">
         <p>
-            Arangetram is the first formal solo performance by the dancer after several years of arduous training with a teacher and education of the Hindu philosophy through mythological and historical stories. Dances are presented in a sequence referred to as ‘Margam’ and are intended to showcase the dancer’s scholarship of the art, in presence of the teacher, connoisseurs of dance, family and friends. It signifies the beginning of a lifelong immersive journey in dance.
+            Arangetram is the first formal solo performance by the dancer after several years of arduous training with a teacher and education of the Hindu philosophy through mythological and historical stories. Dances are presented in a sequence referred to as 'Margam' and are intended to showcase the dancer's scholarship of the art, in presence of the teacher, connoisseurs of dance, family and friends. It signifies the beginning of a lifelong immersive journey in dance.
 
         </p>
       </div>
@@ -137,7 +137,8 @@ Yes, for Arangetram preparation. However, it's not as common for regular student
       <h1>Samskrithi School of Dance</h1>
       <br>
       <p>Samskrithi School of Dance is a school in the Greater Boston area dedicated to promoting Kalakshetra-style Bharatanatyam. Its mission is to teach students dedication and respect for the arts through classes and workshops.</p>
-
+      <br>
+      <p>© 2025 Samskrithi School of Dance. All Rights Reserved.</p>
     </div>
   </div>
 
