--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
       <h1>Samskrithi School of Dance</h1>
       <br>
       <p>Samskrithi School of Dance is a school in the Greater Boston area dedicated to promoting Kalakshetra-style Bharatanatyam. Its mission is to teach students dedication and respect for the arts through classes and workshops.</p>
-
+      <br>
+      <p>© 2025 Samskrithi School of Dance. All Rights Reserved.</p>
     </div>
   </div>
 
